# NMind

./: .gitignore  CHANGES.md  CLAUDE.md  LICENSE  NOTICE-termux.md  README.md  f1.md  gradlew  gradlew.bat  quickask.md  settings.gradle
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: test-all-models.js  test-android-sim.js  test-bridge.js  test-e2e-chat.js  test-full-session.js  test-nvidia-models.js  test-pty-session.js
.github/workflows/: auto-fix.yml  build.yml  interstellar-assets.yml  release.yml  test-e2e-chat.yml  test-full-session.yml  test-mcp-http.yml  test-pty.yml  test.yml
app/: build.gradle  debug.keystore  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: providers.json  setup.sh
app/src/main/assets/dungeon/: index.html
app/src/main/assets/dungeon/assets/opt/: scout2.glb  scout3.glb
app/src/main/assets/nodejs-project/: bridge.js  mcp_http_proxy.js  proot.js
app/src/main/assets/nodejs-project/bridge/: format.js  rtk.js  usage.js
app/src/main/assets/terminal/: index.html
app/src/main/cpp/: CMakeLists.txt  fdexec.cpp  pty.cpp  pty_helper.c
app/src/main/java/com/claudecodesetup/: ClaudeApp.kt  LoginFlowActivity.kt  SettingsActivity.kt  SetupActivity.kt  SplashActivity.kt  TerminalActivity.kt
app/src/main/java/com/claudecodesetup/data/: AppPreferences.kt  Providers.kt  ProvidersRepository.kt  UsageStats.kt
app/src/main/java/com/claudecodesetup/discussion/: DiscussionModels.kt  DiscussionOrchestrator.kt  PromptBuilder.kt
app/src/main/res/drawable/: aurora_bg.xml  bg_error_card.xml  bg_native_toggle.xml  bg_native_toggle_active.xml  bg_provider_card.xml  bg_quick_btn.xml  bg_send_btn.xml  bg_spinner.xml  ic_arrow_back.xml  ic_attach.xml  ic_brand_alibaba.xml  ic_brand_anthropic.xml  ic_brand_baidu.xml  ic_brand_cerebras.xml  ic_brand_claude.xml  ic_brand_databricks.xml  ic_brand_deepseek.xml  ic_brand_gemini.xml  ic_brand_groq.xml  ic_brand_huggingface.xml  ic_brand_kimi.xml  ic_brand_meta.xml  ic_brand_microsoft.xml  ic_brand_minimax.xml  ic_brand_mistral.xml  ic_brand_nvidia.xml  ic_brand_ollama.xml  ic_brand_openai.xml  ic_brand_openrouter.xml  ic_brand_perplexity.xml  ic_brand_qwen.xml  ic_brand_xai.xml  ic_chat.xml  ic_delete.xml  ic_dungeon.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_logo_small.xml  ic_mcp_plug.xml  ic_paste.xml  (+4 more)
app/src/main/res/layout/: activity_login_flow.xml  activity_settings.xml  activity_setup.xml  activity_splash.xml  activity_terminal.xml  item_provider.xml
app/src/main/res/menu/: terminal_menu.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-ms/: strings.xml
app/src/main/res/xml/: accessibility_service_config.xml  backup_rules.xml  network_security_config.xml
interstellar-assets/assets/opt/: drone.glb  flagship.glb  hero1.glb  hero2.glb  hero3.glb  hero4.glb  mothership.glb  scout1.glb  warship.glb
scripts/: add-brand-icon.sh  build-llamaserver.sh  linkat_shim.c
terminal-emulator/: build.gradle
terminal-view/: build.gradle
(+52 files in other folders)
